fix: Clean up contrast issues on auth errors (#9)
closes #8

--- a/src/fastapi_swagger_dark/swagger_ui_dark.css
+++ b/src/fastapi_swagger_dark/swagger_ui_dark.css
@@ -10273,7 +10273,7 @@ body a:hover {
 }
 
 .swagger-ui .dialog-ux .modal-ux-content {
-    max-height: 540px;
+    max-height: max(100vh - 80px, 540px);
     overflow-y: auto;
     padding: 20px
 }
@@ -10941,10 +10941,6 @@ body a:hover {
     padding: 10px 0
 }
 
-.swagger-ui .auth-btn-wrapper .btn-done {
-    margin-right: 1em
-}
-
 .swagger-ui .auth-wrapper {
     display: flex;
     flex: 1;
@@ -10982,14 +10978,14 @@ body a:hover {
 }
 
 .swagger-ui .auth-container .errors {
-    background-color: #fee;
+    background: rgba(249, 62, 62, .1);
+    border: 2px solid var(--red);
     border-radius: 4px;
-    color: red;
     color: var(--text-color);
     font-family: monospace;
     font-size: 12px;
     font-weight: 600;
-    margin: 1em;
+    margin: 1em 0 1em 0;
     padding: 10px
 }
 
